[ADD] Genre Master View Modal

--- a/Readiculous.WebApp/Views/GenreMaster/_GenreViewListPartial.cshtml
+++ b/Readiculous.WebApp/Views/GenreMaster/_GenreViewListPartial.cshtml
@@ -2,6 +2,7 @@
 
 @{
     var books = Model.Books ?? new List<Readiculous.Services.ServiceModels.BookListItemViewModel>();
+    // int totalSlots = 10; // This variable is not used in the rendering, consider removing if not needed.
     int booksPerRow = 5;
     int rows = 2;
 }
