--- a/Readiculous.WebApp/Views/GenreMaster/_GenreListPartial.cshtml
+++ b/Readiculous.WebApp/Views/GenreMaster/_GenreListPartial.cshtml
@@ -29,10 +29,12 @@
                     <td class="align-middle text-center">
                         <div class="d-flex justify-content-center gap-2">
 
-                            <button class="genre-action-btn btn btn-sm view-genre-btn"
-                                    data-genre-id="@item.GenreId" title="View">
-                                <i class="fas fa-eye"></i>
-                            </button>
+                            <a asp-action="GenreViewPage" asp-route-id="@item.GenreId" class="genre-action-btn btn btn-sm" title="View">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                    <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zm-8 4.5c-2.485 0-4.5-2.015-4.5-4.5S5.515 3.5 8 3.5s4.5 2.015 4.5 4.5-2.015 4.5-4.5 4.5zm0-7A2.5 2.5 0 1 0 8 11a2.5 2.5 0 0 0 0-5z" />
+                                </svg>
+                            </a>
+
 
                             <button class="btn btn-sm btn-warning edit-genre-btn"
                                     data-genre-id="@item.GenreId" title="Edit">
