--- a/Readiculous.WebApp/Views/UserMaster/UserMasterScreen.cshtml
+++ b/Readiculous.WebApp/Views/UserMaster/UserMasterScreen.cshtml
@@ -5,6 +5,7 @@
 @{
     ViewData["Title"] = "User Management";
 }
+<link rel="stylesheet" href="~/css/user-master.css" />
 
 <div class="container-fluid px-0">
     <div class="row mb-4 mx-0 align-items-center">
