--- a/Readiculous.WebApp/Views/BookMaster/BookMasterScreen.cshtml
+++ b/Readiculous.WebApp/Views/BookMaster/BookMasterScreen.cshtml
@@ -4,6 +4,8 @@
     var selectedGenres = ViewBag.Genres as List<Readiculous.Services.ServiceModels.GenreViewModel>;
 }
 
+<link rel="stylesheet" href="~/css/book-master.css" />
+
 <div class="container-fluid px-0">
     <div class="row mb-4 mx-0 align-items-center">
         <div class="col-md-6 px-0">
