--- a/Readiculous.WebApp/Views/BookMaster/_BookListPartial.cshtml
+++ b/Readiculous.WebApp/Views/BookMaster/_BookListPartial.cshtml
@@ -31,14 +31,14 @@
                         <span class="text-muted">No Image</span>
                     }
                 </td>
-                <td class="text-center align-middle">@Html.DisplayFor(modelItem => item.Title)</td>
-                <td class="text-center align-middle">@Html.DisplayFor(modelItem => item.Author)</td>
-                <td class ="text-center align-middle">
+                <td class="text-center align-middle" title="@item.Title">@Html.DisplayFor(modelItem => item.Title)</td>
+                <td class="text-center align-middle" title="@item.Author">@Html.DisplayFor(modelItem => item.Author)</td>
+                <td class="text-center align-middle">
                     @if (item.Genres.Any())
                     {
                         foreach (var genre in item.Genres.OrderBy(g => g))
                         {
-                            <span class="badge bg-primary me-1">@genre</span>
+                            <span class="badge bg-primary me-1" title="@genre">@genre</span>
                         }
                     }
                     else
@@ -51,12 +51,12 @@
                 <td class="text-center align-middle" style="white-space: nowrap;">@item.UpdatedTime.ToString("yyyy MMMM dd")</td>
                 <td class="text-center align-middle" style="white-space: nowrap;">@item.UpdatedTime.ToString("h:mm tt")</td>
                 <td class="text-center align-middle">
-                    <div class="d-flex justify-content-center gap-2">
-                        <button class="btn btn-primary btn-sm btn-edit-book" data-bookid="@item.BookId" title="Edit">
-                            <i class="fas fa-edit"></i>
-                        </button>
+                    <div class="d-flex justify-content-center gap-2">                 
                         <button class="btn btn-info btn-sm btn-view-book" data-bookid="@item.BookId" title="View">
                             <i class="fas fa-eye"></i>
+                        </button>
+                        <button class="btn btn-primary btn-sm btn-edit-book" data-bookid="@item.BookId" title="Edit">
+                            <i class="fas fa-edit"></i>
                         </button>
                         <button class="btn btn-danger btn-sm btn-delete-book" data-bookid="@item.BookId" data-bookname="@item.Title" title="Delete">
                             <i class="fas fa-trash"></i>
